<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteThree"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".ui.loginActivity.LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:fontFamily="@font/inter_semi_bold"
        android:includeFontPadding="false"
        android:text="@string/share_files_with_your_classes_safely"
        android:textColor="@color/colorText100"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@null"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/enter_your_email_address"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorText80"
        android:textColorHint="@color/colorSolid"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        tools:ignore="LabelFor,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@null"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/enter_your_password"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorText80"
        android:textColorHint="@color/colorSolid"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        tools:ignore="LabelFor,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/button_get_started"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp"
        android:background="@drawable/drawable_rectangle_corners"
        android:fontFamily="@font/inter_regular"
        android:gravity="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:padding="@dimen/_10sdp"
        android:text="@string/continue_"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_terms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/by_using_this_app_you_are_agreeing_to_our"
        android:textAlignment="center"
        android:textColor="@color/colorText100"
        android:textSize="@dimen/_12ssp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_new_account"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_new_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/inter_regular"
        android:text="@string/new_to_file_share_create_an_account"
        android:textAlignment="center"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:textColor="@color/colorText100"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_started" />
</androidx.constraintlayout.widget.ConstraintLayout>
